Fixed ant file for stress-tests.