@@ -74,10 +74,8 @@
           <include name="*.jar" />
         </fileset>
       </classpath>
-      <sysproperty key="url" value="local:${orient.path}/databases/demo/demo" />
+      <sysproperty key="url" value="local:../${orient.path}/databases/demo/demo" />
       <jvmarg value="-server" />
-      <jvmarg value="-Xms1G" />
-      <jvmarg value="-Xmx1G" />
       <jvmarg value="-XX:+AggressiveOpts" />
       <jvmarg value="-XX:CompileThreshold=200" />
     </java>
@@ -90,12 +88,8 @@
           <include name="*.jar" />
         </fileset>
       </classpath>
-      <sysproperty key="url" value="local:${orient.path}/databases/demo/demo" />
+      <sysproperty key="url" value="local:../${orient.path}/databases/demo/demo" />
       <jvmarg value="-server" />
-      <jvmarg value="-Xms1G" />
-      <jvmarg value="-Xmx1G" />
-      <jvmarg value="-XX:+AggressiveOpts" />
-      <jvmarg value="-XX:CompileThreshold=200" />
     </java>
 
     <echo>MASSIVE INSERT 20,000 POJOs</echo>
@@ -106,10 +100,8 @@
           <include name="*.jar" />
         </fileset>
       </classpath>
-      <sysproperty key="url" value="local:${orient.path}/databases/demo/demo" />
+      <sysproperty key="url" value="local:../${orient.path}/databases/demo/demo" />
       <jvmarg value="-server" />
-      <jvmarg value="-Xms1G" />
-      <jvmarg value="-Xmx1G" />
       <jvmarg value="-XX:+AggressiveOpts" />
       <jvmarg value="-XX:CompileThreshold=200" />
     </java>
